<resources>
    <string name="app_name">NetizenIt Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_student_reg">StudentRegActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="toolbar_title">Admission Form</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="edit">Edit</string>
    <string name="select_location">Select Location</string>
    <string name="select_profession">Select Profession</string>
    <string name="select_experience">Select Experience Year</string>
    <string name="select_expire_date">Select Expire Days</string>
    <string name="select_salary_range">Select Salary Range</string>
    <string name="help_text">For any kind of help and query click  below number.</string>

    <string name="help_phone_number">01688503233</string>
    <string name="hint_name">Student Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="err_msg_name">Enter Student Name</string>
    <string name="err_msg_pin">Enter PIN Code</string>
    <string name="err_msg_house">Enter House No.</string>
    <string name="err_msg_area">Enter Area</string>
    <string name="err_msg_birth">Enter Birthday</string>
    <string name="err_msg_city">Enter City</string>


    <string name="err_msg_phone">Phone Not Valid</string>
    <string name="err_msg_email">Enter Valid Email</string>
    <string name="err_msg_passport">Passport Not Valid</string>
    <string name="hint_house_no">House No.</string>
    <string name="hint_area">Area </string>
    <string name="hint_nid">NID</string>
    <string name="hint_address">City</string>
    <string name="hint_pin_code">Post Code</string>

    <string name="hint_username">Enter Username</string>
    <string name="select_blood">Select Blood</string>
    <string name="select_session">Session</string>
    <string name="select_class">Class</string>
    <string name="select_contact">Select Contact Person</string>
    <string name="title_activity_all_student_info">AllStudentInfoActivity</string>
    <string name="title_activity_single_student">SingleStudentActivity</string>
    <string name="title_activity_admin">AdminActivity</string>

</resources>
