<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_reg"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appbar"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/student_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:clickable="true"
                android:orientation="horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/admin" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_pic_upload"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/image_change" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_ng"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_session"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/session"
                        android:textColor="#c1bbbb" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_ng"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_class"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:entries="@array/spinner_class"
                        android:textColor="#c1bbbb" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear2"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="5dp"
            android:paddingRight="24dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#c1bbbb"
                android:textColorHint="#817e7e">

                <EditText
                    android:id="@+id/et_student_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ng"
                    android:drawableRight="@drawable/option"
                    android:hint="@string/hint_name"
                    android:maxLines="3"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"></EditText>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear3"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#c1bbbb"
                android:textColorHint="#817e7e">

                <EditText
                    android:id="@+id/phone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ng"
                    android:drawableRight="@drawable/option"
                    android:hint="@string/hint_phone"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#c1bbbb" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#c1bbbb"
                android:textColorHint="#817e7e">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ng"
                    android:drawableRight="@drawable/option"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#c1bbbb" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:textColor="#c1bbbb">

                <EditText
                    android:id="@+id/birth_of_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ng"
                    android:drawableRight="@drawable/ic_date_range_black_24dp"
                    android:hint="Birth Date"
                    android:inputType="date"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#c1bbbb"
                    android:textColorHint="#817e7e"></EditText>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#c1bbbb"
                android:textColorHint="#817e7e">

                <EditText
                    android:id="@+id/house_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ng"
                    android:drawableRight="@drawable/option"
                    android:hint="@string/hint_house_no"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#c1bbbb" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#c1bbbb"
                android:textColorHint="#817e7e">

                <EditText
                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ng"
                    android:drawableRight="@drawable/option"
                    android:hint="@string/hint_area"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#c1bbbb" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#c1bbbb"
                android:textColorHint="#817e7e">

                <EditText
                    android:id="@+id/input_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ng"
                    android:drawableRight="@drawable/option"
                    android:hint="@string/hint_address"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#c1bbbb" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pin_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#c1bbbb"
                android:textColorHint="#817e7e">

                <EditText
                    android:id="@+id/input_pin_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ng"
                    android:drawableRight="@drawable/option"
                    android:hint="@string/hint_pin_code"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#c1bbbb" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contact_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:text="Contact Person"
                    android:textColor="#817e7e"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_ng">

                <Spinner
                    android:id="@+id/spinner_contact_person"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/contact"
                    android:textColor="#c1bbbb" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/blood_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:text="Blood Group"
                    android:textColor="#817e7e"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_ng">

                <Spinner
                    android:id="@+id/spinner_blood_grp"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/option"
                    android:textColor="#ff0c35" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_male_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Male"
                    android:textColor="#817e7e"
                    android:textColorHint="#817e7e"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_female_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="Female"
                    android:textColor="#817e7e"
                    android:textColorHint="#817e7e"
                    android:textSize="20sp" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="I AGREE TO SCHOOL TERMS OF USE"
                android:textColor="#090808"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear4"
            android:layout_marginTop="24dp"
            android:gravity="bottom">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_profile_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_blue"
                android:gravity="center"
                android:padding="10dp"
                android:paddingLeft="24dp"
                android:paddingTop="12dp"
                android:text="Submit"
                android:textAlignment="inherit"
                android:textAllCaps="false"
                android:textColor="#181515"
                android:textSize="22sp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>